--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "wp-performance/press-wind-helpers",
+  "name": "spizeak/press-wind-helpers",
   "description": "Helpers plugin for use with press-wind theme",
   "type": "wordpress-plugin",
-  "homepage": "https://github.com/WP-Performance/press-wind-helpers",
+  "homepage": "https://github.com/SpiZeak/press-wind-helpers",
   "keywords": [
     "wordpress",
     "plugin"
@@ -16,11 +16,21 @@
     {
       "name": "faramazpat",
       "email": "infos@goodmotion.fr"
+    },
+    {
+      "name": "Max Trewhitt",
+      "email": "max@trewhitt.se"
     }
   ],
   "config": {
     "allow-plugins": {
       "pestphp/pest-plugin": true
+    }
+  },
+  "repositories": {
+    "presswind-assets": {
+      "type": "vcs",
+      "url": "git@github.com:SpiZeak/presswind-assets.git"
     }
   },
   "require": {
